--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/petern160/github-avatar-downloader#readme",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "request": "^2.88.0"
   }
 }
